# tau-by-clarity

./: .env.example  .gitignore  Dockerfile  PARITY.md  README.md  README_CN.md  docker-entrypoint.sh  eval_parity.py  parity_audit.py  pyproject.toml
design/: context-and-memory-management.md  outer-loop.md
docs/: context-and-memory-management.md  deepswe_implementation.md  deepswe_strategy.md  investigation.md
evals/: active_compression_bench.py  clarify_chat_fetch.py  coding_recall_ab.py  curator_eval.py  headroom_compression_parity.py  headroom_compression_parity_matrix.md  langfuse_fetch.py  niah_calibrate.py  niah_recovery.py  pii_coverage_check.py  recovery_eval.py  tier0_context_replay.py  tier1_recovery_ab.py
evals/deep_swe/: README.md  pi_py_agent.py  tau_agent.py
evals/fixtures/: synthetic_planning.jsonl
skills/: README.md
skills/agent-build-pattern/: SKILL.md
skills/agent-build-pattern/references/: build-sequence.md  control-planes.md
