[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tau-by-clarity"
version = "0.55.21"
description = "Python port of pi-mono: coding agent with multi-provider LLM support, TUI, agent loop, and tools"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Marcus Swift", email = "marcus@claritybusinesssolutions.ca" },
]
keywords = ["ai", "agent", "coding-agent", "llm", "anthropic", "openai", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]
# Merged external dependencies from all 4 sub-packages (pi-ai, pi-agent, pi-coding-agent, pi-tui)
dependencies = [
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.64.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "jsonschema>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiofiles>=24.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.17.0",
    "wcwidth>=0.2.13",
    "mistune>=3.0.2",
    "pillow>=11.0.0",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/Nuosis/tau-by-clarity"
Repository = "https://github.com/Nuosis/tau-by-clarity"
Issues = "https://github.com/Nuosis/tau-by-clarity/issues"

[project.scripts]
tau = "pi_coding_agent.main:main"

# Historical note: the old `pi` / `tau` console scripts were dropped (the `pi`
# slot collides with the Node.js pi-mono CLI). The rebrand ships a single `tau`
# entry point; `python -m pi_coding_agent.main` also still works.

# Bundle the sub-packages into a single wheel (namespace distribution).
# Users get: import pi_ai, pi_agent, pi_coding_agent, pi_tui, tau_loop, plus the `tau` CLI.
[tool.hatch.build.targets.wheel.force-include]
"packages/ai/src/pi_ai" = "pi_ai"
"packages/agent/src/pi_agent" = "pi_agent"
"packages/coding-agent/src/pi_coding_agent" = "pi_coding_agent"
"packages/tui/src/pi_tui" = "pi_tui"
"packages/loop/src/tau_loop" = "tau_loop"
"packages/aliases/tau_ai" = "tau_ai"
"packages/aliases/tau_agent" = "tau_agent"
"packages/aliases/tau_coding_agent" = "tau_coding_agent"
"packages/aliases/tau_tui" = "tau_tui"
# Bundled, first-class skills (baked into the harness — see
# `pi_coding_agent.bundled_skills`). The repo-root `skills/` tree is the
# source of truth; the wheel ships it under `pi_coding_agent/bundled_skills/`
# so `get_bundled_skills_dir()` resolves the same layout in dev and installed.
"skills/agent-build-pattern" = "pi_coding_agent/bundled_skills/agent-build-pattern"

[tool.hatch.build.targets.sdist]
include = [
    "packages/ai/src/pi_ai",
    "packages/agent/src/pi_agent",
    "packages/coding-agent/src/pi_coding_agent",
    "packages/tui/src/pi_tui",
    "packages/loop/src/tau_loop",
    "packages/aliases/tau_ai",
    "packages/aliases/tau_agent",
    "packages/aliases/tau_coding_agent",
    "packages/aliases/tau_tui",
    "skills/agent-build-pattern",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "PARITY.md",
    "parity_audit.py",
    "eval_parity.py",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/tests",
    "**/tests/**",
    "**/examples",
    "**/.tau",
    "**/.pi-py",
    "**/build",
    "**/.venv",
]

# Keep the uv workspace for local dev (sub-packages remain independent).
[tool.uv.workspace]
members = ["packages/ai", "packages/agent", "packages/coding-agent", "packages/tui", "packages/loop"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "live: tests that require live external provider credentials or network access",
]
testpaths = [
    "packages/ai/tests",
    "packages/agent/tests",
    "packages/coding-agent/tests",
    "packages/tui/tests",
]
